@@ -1,5 +1,6 @@
 2014-03-18
 ==========
+! BREAKING CHANGE: TDBGroup has been renamed to TDBTransaction.
 + getTableWithName selector added on group.
 * getting and creating table methods on group no longer take error argument.
 
